Update navigation menu for course-related content

--- a/ByteCore.Web/Views/Shared/_Navigation.cshtml
+++ b/ByteCore.Web/Views/Shared/_Navigation.cshtml
@@ -12,9 +12,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index", "Home")">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="@Url.Action("Resume", "Home")">Resume</a></li>
-                <li class="nav-item"><a class="nav-link" href="@Url.Action("Projects", "Home")">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="@Url.Action("Contact", "Home")">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="@Url.Action("Index", "Courses")">Courses</a></li>
+                <li class="nav-item"><a class="nav-link" href="@Url.Action("Overview", "Courses")">Overview</a></li>
+                <li class="nav-item"><a class="nav-link" href="@Url.Action("Registration", "Account")">Registration</a></li>
             </ul>
         </div>
     </div>
