--- a/ByteCore.Web/Views/Shared/_Footer.cshtml
+++ b/ByteCore.Web/Views/Shared/_Footer.cshtml
@@ -10,7 +10,7 @@
                 <span class="mx-1">&middot;</span>
                 <a class="small" href="#!">Terms</a>
                 <span class="mx-1">&middot;</span>
-                <a class="small" href="#!">Contact</a>
+                <a class="small" href="@Url.Action("Index", "AboutUs")">Contact</a>
             </div>
         </div>
     </div>
