--- a/ByteCore.Web/Views/Courses/Index.cshtml
+++ b/ByteCore.Web/Views/Courses/Index.cshtml
@@ -1,38 +1,39 @@
-﻿@{
+﻿@model IEnumerable<ByteCore.Web.Models.CourseModel>
+@{
     ViewBag.Title = "Courses";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <section class="py-5">
     <div class="container px-5 mb-5">
         <div class="text-center mb-5">
-            <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Projects</span></h1>
+            <h1 class="display-5 fw-bolder mb-0">
+                <span class="text-gradient d-inline">Courses</span>
+            </h1>
         </div>
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-11 col-xl-9 col-xxl-8">
-                <!-- Project Card 1-->
-                <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                    <div class="card-body p-0">
-                        <div class="d-flex align-items-center">
-                            <div class="p-5">
-                                <h2 class="fw-bolder">Project Name 1</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                @foreach(var course in Model)
+                {
+                    <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                        <div class="card-body p-0">
+                            <div class="d-flex align-items-center">
+                                <div class="p-5">
+                                    <h2 class="fw-bolder">@course.Title</h2>
+                                    <p>
+                                        @course.ShortDescription
+                                    </p>
+                                    <a href="@Url.Action("Course", "Courses", new { id = course.Id })" class="btn btn-success me-2">
+                                        Enroll
+                                    </a>
+                                    <a href="@Url.Action("Roadmap", "Courses", new { id = course.Id })" class="btn btn-primary">
+                                        View Roadmap
+                                    </a>
+                                </div>
+                                <img class="img-fluid" src="@course.ImageUrl" alt="@course.Title" />
                             </div>
-                            <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="Project 1" />
                         </div>
                     </div>
-                </div>
-                <!-- Project Card 2-->
-                <div class="card overflow-hidden shadow rounded-4 border-0">
-                    <div class="card-body p-0">
-                        <div class="d-flex align-items-center">
-                            <div class="p-5">
-                                <h2 class="fw-bolder">Project Name 2</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
-                            </div>
-                            <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="Project 2" />
-                        </div>
-                    </div>
-                </div>
+                }
             </div>
         </div>
     </div>
