Add Terms & Conditions page

--- a/ByteCore.Web/Views/Shared/_Footer.cshtml
+++ b/ByteCore.Web/Views/Shared/_Footer.cshtml
@@ -8,7 +8,7 @@
             <div class="col-auto">
                 <a class="small" href="#!">Privacy</a>
                 <span class="mx-1">&middot;</span>
-                <a class="small" href="#!">Terms</a>
+                <a class="small" href="@Url.Action("Index", "Terms")">Terms</a>
                 <span class="mx-1">&middot;</span>
                 <a class="small" href="@Url.Action("Index", "AboutUs")">Contact</a>
             </div>
