--- a/ByteCore.Web/Views/Shared/_Footer.cshtml
+++ b/ByteCore.Web/Views/Shared/_Footer.cshtml
@@ -6,7 +6,7 @@
                 <div class="small m-0">Copyright &copy; Your Website 2023</div>
             </div>
             <div class="col-auto">
-                <a class="small" href="#!">Privacy</a>
+                <a class="small" href="@Url.Action("Index", "Privacy")">Privacy</a>
                 <span class="mx-1">&middot;</span>
                 <a class="small" href="@Url.Action("Index", "Terms")">Terms</a>
                 <span class="mx-1">&middot;</span>
