--- a/ByteCore.Web/Views/Shared/_Footer.cshtml
+++ b/ByteCore.Web/Views/Shared/_Footer.cshtml
@@ -3,7 +3,7 @@
     <div class="container px-5">
         <div class="row align-items-center justify-content-between flex-column flex-sm-row">
             <div class="col-auto">
-                <div class="small m-0">Copyright &copy; Your Website 2023</div>
+                <div class="small m-0">Copyright &copy; ByteCore @DateTime.UtcNow.Year</div>
             </div>
             <div class="col-auto">
                 <a class="small" href="@Url.Action("Index", "Privacy")">Privacy</a>
