--- a/ByteCore.Web/Views/Shared/_EnrollButton.cshtml
+++ b/ByteCore.Web/Views/Shared/_EnrollButton.cshtml
@@ -2,7 +2,7 @@
 
 <form action="@Url.Action("Enroll", "Courses")" method="post">
     <input type="hidden" name="courseId" value="@Model.Id" />
-    <button type="submit" class="btn btn-success btn-lg mt-3">
+    <button type="submit" class="btn btn-outline-success btn-lg">
         Enroll Now
     </button>
 </form>
