--- a/ByteCore.Web/Views/Shared/_Layout.cshtml
+++ b/ByteCore.Web/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>@ViewBag.Title - My IT Training Site</title>
+    <title>@ViewBag.Title</title>
     <link rel="icon" type="image/x-icon" href="~/Content/Images/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
