--- a/ByteCore.Web/Views/Account/Manage.cshtml
+++ b/ByteCore.Web/Views/Account/Manage.cshtml
@@ -8,7 +8,7 @@
         <div class="text-center mb-5">
             <h1 class="display-5 fw-bolder">Manage Account</h1>
         </div>
-        <form method="post" action="@Url.Action("Update", "Account")">
+        <form method="post" action="@Url.Action("Manage", "Account")">
             @Html.AntiForgeryToken()
             <div class="mb-3">
                 <label class="form-label">Name</label>
